--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1,5 +1,9 @@
 ---
 ko:
+  will_paginate:
+    previous_label: "<<"
+    next_label: ">>"
+    page_gap: "&hellip;"
   date:
     abbr_day_names:
     - 일
